--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+  <meta charset="utf-8'>
+                 <title> Hello World, it's <strong> Derrien</strong>!</title>
+                 </head>
+                 <body>
+                 <h1> </h1>
+                 </html>
+                 
