--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8'>
                  <title> Hello World, it's <strong> Derrien</strong>!</title>
-                 </head>
+                 </head> Hello World, it's <strong> Derrien</strong>!
                  <body>
                  <h1> </h1>
                  </body>
