--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
   <meta charset="utf-8'>
                  <title> Hello World, it's <strong> Derrien</strong>!</title>
-                 </head> Hello World, it's <strong> Derrien</strong>!
-                 <body>
+                 </head> 
+                 <body> Hello World, it's <strong> Derrien</strong>!
                  <h1> </h1>
                  </body>
                  </html>
