--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
                  <title> Hello World, it's <strong> Derrien</strong>!</title>
                  </head> 
                  <body> Hello World, it's <strong> Derrien</strong>!
-                 <h1> </h1>
+                 <h1> Hello World, it's <strong> Derrien</strong>! </h1>
                  </body>
                  </html>
                  
