--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
   <meta charset="utf-8'>
-                 <title> Hello World, it's <strong> Derrien</strong>!</title>
-                 </head> 
-                 <body> Hello World, it's <strong> Derrien</strong>!
-                 <h1> Hello World, it's <strong> Derrien</strong>! </h1>
+                 <title> Hello World, it's <strong> Derrien</strong>! </title>
+                 </head>
+       <body> Hello World, it's <strong> Derrien</strong>!
+             <h1> Hello World, it's <strong> Derrien</strong>! 
+                 </h1>
                  </body>
                  </html>
                  
