--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World, it's <strong> Derrien</strong>! </title>
-                 </head>
+                 </head> <h1> Hello World, it's <strong> Derrien</strong>! </h1>
        <body> Hello World, it's <strong> Derrien</strong>!
-             <h1> Hello World, it's <strong> Derrien</strong>! </h1>
+            
                  </body>
                  </html>
                  
