--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
                  <title> Hello World, it's <strong> Derrien</strong>! </title>
                  </head> <h1> Hello World, it's <strong>Derrien</strong>! </h1>
+  <h2> test two for <strong> bold </strong> </h2>
        <body> Hello World, it's <strong> Derrien</strong>!
             
                  </body>
