--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
                  </head> <h1> Hello World, it's <strong>Derrien</strong>! </h1>
   <h2> test two for <strong> bold </strong> </h2>
        <body> Hello World, it's <strong> Derrien</strong>!
-            
+         <p> Test of <strong> bold </strong> unbold text. </p>
                  </body>
                  </html>
                  
