--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World, it's <strong> Derrien</strong>! </title>
-                 </head> <h1> Hello World, it's <strong>Derrien</strong>! </h1>
+                 </head> <h1> Hello World, it's Derrien! </h1>
   <h2> test two for <strong> bold </strong> </h2>
        <body> Hello World, it's <strong> Derrien</strong>!
          <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text. </p>
