--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta charset="utf-8">
-                 <title> Hello World, it's <strong> Derrien</strong>! </title>
+                 <title> Hello World, it's Derrien! </title>
                  </head> <h1> Hello World, it's Derrien! </h1>
   <h2> test two for <strong> bold </strong> </h2>
        <body> Hello World, it's <strong> Derrien</strong>!
