--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
                  <title> Hello World, it's Derrien! </title>
                  </head> <h1> Hello World, it's Derrien! </h1>
-  <h2> test two for <strong> bold </strong> </h2>
+  <h2> test two for bold without strong command.</h2>
        <body> Hello World, it's <strong> Derrien</strong>!
          <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text. </p>
                  </body>
