--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <h2> test two for bold without strong command.</h2>
        <body> Hello World, it's <strong> Derrien</strong>!
          <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text. </p>
+         <h3> My wife made me do it! </h3>
                  </body>
                  </html>
                  
