--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
                  </head> <h1> Hello World, it's Derrien! </h1>
   <h2> test two for bold without strong command.</h2>
        <body> Hello World, it's <strong> Derrien</strong>!
-         <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text. </p>
-         <h3> My wife made me do it! </h3>
+         <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text (plus <em><strong> Bold Italic</em></strong>. </p>
+         <h3> </h3>
                  </body>
                  </html>
                  
