--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
   <meta charset="utf-8">
-                 <title> Hello World, it's Derrien! </title>
+                 <title> Hello World! </title>
                  </head> <h1> Hello World, it's Derrien! </h1>
   <h2> test two for bold without strong command.</h2>
-       <body> Hello World, it's <strong> Derrien</strong>!
-         <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text (plus <em><strong> Bold Italic</em></strong>. </p>
-         <h3> </h3>
+       <body> Hello World, it's <strong> Derrien</strong> again!
+         <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text (plus <em><strong> Bold Italic</em></strong>). </p>
+         <h3> Alingment check </h3>
                  </body>
                  </html>
                  
