--- a/javascripts.html
+++ b/javascripts.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+  <meta charset="utf-8">
+                 <title> Hello World! </title>
+                 </head> <h1> Hello World, it's Derrien! </h1>
+  <h2> test two for bold without strong command.</h2>
+       <body> Hello World, it's <strong> Derrien</strong> again!
+         <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text (plus <em><strong> Bold Italic</em></strong>). </p>
+         <h3> Alingment check </h3>
+                 </body>
+                 </html>
