--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! </title>
-                 </head> <h1> <img src="https://github.com/DerrienWalters/DerrienWalters.github.io/blob/main/CSC%20106%20banner.jpg"> Hello World, it's Derrien! </h1>
+                 </head> <h1> <img src="/DerrienWalters/DerrienWalters.github.io/blob/main/CSC%20106%20banner.jpg"> Hello World, it's Derrien! </h1>
   <h2> test two for bold without strong command.</h2>
        <body> Hello World, it's <strong> Derrien</strong> again!
          <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text (plus <em><strong> Bold Italic</em></strong>). </p>
