--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
                  <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">
   </head> <h1>  Hello World, it's Derrien! </h1>
   <h2> test two for bold without strong command.</h2>
+  <ul>
+    <li> list item 1 unordered.</li>
+    <li> list item 2 test</li>
+  </ul>
        <body> Hello World, it's <strong> Derrien</strong> again!
          <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text (plus <em><strong> Bold Italic</em></strong>). </p>
          <h3> Alingment check </h3>
