--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
        <body> Hello World, it's <strong> Derrien</strong> again!
          <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text (plus <em><strong> Bold Italic</em></strong>). </p>
          <h3> Alingment check </h3>
-                 </body>
+  <ol>
+    <li> out of order 2</li>
+    <li> item 1</li>
+  </body>
                  </html>
                  
