--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
                  <title> Hello World! </title>
                  <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">
   </head> <h1>  Hello World, it's Derrien! </h1>
+  <p>Please try out the following <strong>Navigation Buttons</strong></p>
+  <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png">
   <h2> test two for bold without strong command.</h2>
   <ul>
     <li> list item 1 unordered.</li>
