--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   </head> <h1>  Hello World, it's Derrien! </h1>
   <p>Please try out the following <strong>Navigation Buttons</strong></p>
   <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png">
-  <h2> test two for bold without strong command.</h2>
+  <h2> How did I made this website?</h2>
+  <p> I started by very carefully listening to the assigned videos from Khan Academy. As I took notes I start to better understand how and why HTML commands are used to tell the browser what to display. There were a good number of different commands covered such as how to <strong>Bold Text</strong>, <em>Italics</em>, build headers, paragraphs, lists, tables, links, and add images.<br>
+  <strong>This is my first ever Website so hopefully I can use this Homepage and continue to update the information contained</strong>.
+  </p>
+    
   <ul>
     <li> list item 1 unordered.</li>
     <li> list item 2 test</li>
