--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   </head> <h1>  Hello World, it's Derrien! </h1>
   <p>Please try out the following <strong>Navigation Buttons</strong></p>
   <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png">
-  <h2> How did I made this website?</h2>
-  <p> I started by very carefully listening to the assigned videos from Khan Academy. As I took notes I start to better understand how and why HTML commands are used to tell the browser what to display. There were a good number of different commands covered such as how to <strong>Bold Text</strong>, <em>Italics</em>, build headers, paragraphs, lists, tables, links, and add images.<br>
+  <h2> Description of this website</h2>
+  <p> This is a website bulid in github.com using HTML coding. It will continue to evolve as we learn more advanced commands and in the end look much different I'm sure. For now it
+    is a place to see what the HTML display the different commands I am learning. That the moment the website has (4) images which had to be saved on the my github server to be
+    displayed here. 
+  </p>
+  <h3> How did I made this website?</h3>
+  <p> I started by very carefully listening to the assigned videos from Khan Academy. As I took notes I start to better understand how and why HTML commands are used to tell the 
+    browser what to display. There were a good number of different commands covered such as how to <strong>Bold Text</strong>, <em>Italics</em>, build headers, paragraphs, lists,
+    tables, links, and add images.<br>
   <strong>This is my first ever Website so hopefully I can use this Homepage and continue to update the information contained</strong>.
   </p>
     
