--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <h2> Description of this website</h2>
   <p> This is a website bulid in github.com using HTML coding. It will continue to evolve as we learn more advanced commands and in the end look much different I'm sure. For now it
     is a place to see what the HTML display the different commands I am learning. That the moment the website has (4) images which had to be saved on the my github server to be
-    displayed here. 
+    displayed here. Each button above should bring you to different locations where the button describes the information contained. Below this description paragraph I have included
+    notes on what I have learn so far with some practice to help me remember the commands. To view the HTML code you can right click anywhere on this webpage and from that menu click 
+    Inspect Element or View Page Source
   </p>
   <h3> How did I made this website?</h3>
   <p> I started by very carefully listening to the assigned videos from Khan Academy. As I took notes I start to better understand how and why HTML commands are used to tell the 
