--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p> I started by very carefully listening to the assigned videos from Khan Academy. As I took notes I start to better understand how and why HTML commands are used to tell the 
     browser what to display. There were a good number of different commands covered such as how to <strong>Bold Text</strong>, <em>Italics</em>, build headers, paragraphs, lists,
     tables, links, and add images.<br>
-  <strong>This is my first ever Website so hopefully I can use this Homepage and continue to update the information contained</strong>.
+  <strong>This is my first ever website so hopefully I can use this Homepage and continue to update the information contained</strong>.
   </p>
     
   <ul>
