--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
                  <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">
   </head> <h1>  Hello World, it's Derrien! </h1>
   <p>Please try out the following <strong>Navigation Buttons</strong></p>
-  <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png">
+  <table>
+    <thead>
+      <tr>
+        <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"></td>
+        <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"></td>
+        <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png"></td>
+      </tr>
+    </thead>
   <h2> Description of this website</h2>
   <p>   This is a website bulid in github.com using HTML coding. It will continue to evolve as we learn more advanced commands and in the end look much different I'm sure. For now it
     is a place to see what the HTML display the different commands I am learning. That the moment the website has (4) images which had to be saved on the my github server to be
