--- a/javascripts.html
+++ b/javascripts.html
@@ -3,11 +3,24 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! </title>
-    <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">
-                 </head> <h1> Hello World, it's Derrien! </h1>
-  <h2> test two for bold without strong command.</h2>
-       <body> Hello World, it's <strong> Derrien</strong> again!
-         <p> Test of <strong> bold </strong> unbold text and <em> italic </em> text (plus <em><strong> Bold Italic</em></strong>). </p>
-         <h3> Alingment check </h3>
-                 </body>
+                 <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">
+  </head> <h1>  Hello World, it's Derrien! </h1>
+  <p>Please try out the following <strong>Navigation Buttons</strong></p>
+  <table>
+    <thead>
+      <tr>
+        <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"></td>
+        <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"></td>
+        <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png"></td>
+      </tr>
+    </thead>
+  <h2> Description of this webpage</h2>
+  <p>   This is a website bulid in github.com using HTML coding. It will continue to evolve as we learn more advanced commands and in the end look much different I'm sure. For now it
+    is a place to see what the HTML display the different commands I am learning. That the moment the website has (4) images which had to be saved on the my github server to be
+    displayed here. Each button above should bring you to different locations where the button describes the information contained. Below this description paragraph I have included
+    notes on what I have learn so far with some practice to help me remember the commands. To view the HTML code you can right click anywhere on this webpage and from that menu click 
+    Inspect Element or View Page Source.
+  </p>
+  
+  </body>
                  </html>
