--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
                  <title> Hello World! </title>
                  <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">
   </head> <h1>  Hello World, it's Derrien! </h1>
+  <body>
   <p>Please try out the following <strong>Navigation Buttons</strong></p>
   <table>
     <thead>
