--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html>
   <head>
   <meta charset="utf-8">
-                 <title> Hello World! </title>
-                 <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">
-  </head> <h1>  Hello World, it's Derrien! </h1>
-  <body>
-  <p>Please try out the following <strong>Navigation Buttons</strong></p>
-  <table>
+                 <title> Hello World! Tab title</title>
+                 <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">  <table>
     <thead>
       <tr>
         <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"></td>
@@ -16,6 +12,10 @@
       </tr>
     </thead>
     </table>
+  </head> <h1>  Hello World, it's Derrien! </h1>
+  <body>
+  <p>Please try out the above <strong>Navigation Buttons</strong>!</p>
+
   <h2> Description of this website</h2>
   <p>   This is a website bulid in github.com using HTML coding. It will continue to evolve as we learn more advanced commands and in the end look much different I'm sure. For now it
     is a place to see what the HTML display the different commands I am learning. That the moment the website has (4) images which had to be saved on the my github server to be
