--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
                  <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">  <table>
     <thead>
       <tr>
-        <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"<a> refh="https://DerrienWalters.github.io"</a>></td>
+        <td><a href="https://DerrienWalters.github.io"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png" </a></td>
         <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"></td>
         <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png"></td>
       </tr>
