--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <thead>
       <tr>
         <td><a href="https://DerrienWalters.github.io"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png" </a></td>
-        <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"></td>
+        <td><a href="https://DerrienWalters.github.io/Javascripts"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"></a></td>
         <td><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png"></td>
       </tr>
     </thead>
