--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <tr>
         <td><a href="https://DerrienWalters.github.io"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"></a></td>
         <td><a href="https://DerrienWalters.github.io/javascripts.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/blob/main/about.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png"></a></td>
+        <td><a href="https://DerrienWalters.github.io/about.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png"></a></td>
       </tr>
     </thead>
     </table>
