--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   <p>Please try out the above <strong>Navigation Buttons</strong>!</p>
 
   <h2> Description of this webpage</h2>
-  <p>   This is a website bulid in github.com using HTML coding. 
+  <p>   This is a website bulid in github.com using HTML coding. I'm not sure if this page should be about the page itself or me. 
   </p>
   
   </body>
