--- a/javascripts.html
+++ b/javascripts.html
@@ -17,7 +17,7 @@
   <p>Please try out the above <strong>Navigation Buttons</strong>!</p>
 
   <h2> Description of this webpage</h2>
-  <p>   This is a website bulid in github.com using HTML coding. 
+  <p>   This is a website bulid in github.com using HTML coding. I believe this page will be where you in the furute can find links to my projects in Javascripts.
   </p>
   
   </body>
