--- a/javascripts.html
+++ b/javascripts.html
@@ -12,7 +12,7 @@
       </tr>
     </thead>
     </table>
-  </head> <h1>  Hello World, it's Derrien again! </h1>
+  </head> <h1>  Welcome to the Javascript webpage! </h1>
   <body>
   <p>Please try out the above <strong>Navigation Buttons</strong>!</p>
 
