--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </tr>
     </thead>
     </table>
-  </head> <h1>  Hello World, it's Derrien! </h1>
+  </head> <h1>  Hello World, it's Derrien! Welcome to my website's home page.</h1>
   <body>
   <p>Please try out the above <strong>Navigation Buttons</strong>!</p>
 
