--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     Inspect Element or View Page Source.
   </p>
   <h3> How did I made this website?</h3>
-  <p>   I started by very carefully listening to the assigned videos from Khan Academy. As I took notes I start to better understand how and why HTML commands are used to tell the 
+  <p>   I started by very carefully listening to the assigned videos from Khan Academy. As I took notes I started to better understand how and why HTML commands are used to tell the 
     browser what to display. There were a good number of different commands covered such as how to <strong>Bold Text</strong>, <em>Italics</em>, build headers, paragraphs, lists,
     tables, links, and add images.<br>
   <strong>This is my first ever website so hopefully I can use this Homepage and continue to update the information contained</strong>.
