--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta charset="utf-8">
-                 <title> Hello World! Tab title</title>
+                 <title> Hello World! About Tab title</title>
                  <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">  <table>
     <thead>
       <tr>
