--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
                  <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">  <table>
     <thead>
       <tr>
-        <td><a href="https://DerrienWalters.github.io"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"></a></td>
+        <td><a href="https://DerrienWalters.github.io/index.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"></a></td>
         <td><a href="https://DerrienWalters.github.io/javascripts.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"></a></td>
         <td><a href="https://DerrienWalters.github.io/about.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png"></a></td>
       </tr>
