--- a/javascripts.html
+++ b/javascripts.html
@@ -12,10 +12,10 @@
       </tr>
     </thead>
     </table>
-  </head> <h1>  Welcome to the Javascript webpage! </h1>
+  </head> <h1>  Welcome to Derrien's Javascript webpage! </h1>
   <body>
-  <p>   
+  <p>   This page will contain Javascript apps I make in my CSC 106 course at the University of Rhode Island.
   </p>
-  
+    
   </body>
                  </html>
