--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     </table>
   </head> <h1>  Welcome to the About Me page! </h1>
   <body>
-    <p> My name is Derrien Walters. I am a CSC106 student this year at <a href="https://uri.edu"><strong>URI</strong></a>. I am honor to have served in the U.S. Navy's Submarine Force for 
+    <p> My name is Derrien Walters. I am a CSC106 student this year at <a href="https://uri.edu"><strong>URI</strong></a>. I am honored to have served in the U.S. Navy's Submarine Force for 
       more than 12 years. I was fortunate to have been stationed in Hawaii for the later part of my career and that is where I learn to surf.
       I am currently persuing a Compuer Science degree with a minor in Business. My focus is on schooling currently but I am open to job offers.
     </p>
