--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <li> out of order 2</li>
     <li> item 1</li>
          </ol>
+         <img src="CSC 106 banner.jpg" width="1500">
   </body>
                  </html>
                  
