--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! Tab title</title>
-                 <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">  <table>
+                 <img src="CSC 106 banner.jpg" width="1500">  
+    <table>
     <thead>
       <tr>
         <td><a href="https://DerrienWalters.github.io/index.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"></a></td>
@@ -41,7 +42,7 @@
     <li> out of order 2</li>
     <li> item 1</li>
          </ol>
-         <img src="CSC 106 banner.jpg" width="1500">
+        
   </body>
                  </html>
                  
