--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <table>
     <thead>
       <tr>
-        <td><a href="https://DerrienWalters.github.io/index.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/javascripts.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/about.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png"></a></td>
+        <td><a href="https://DerrienWalters.github.io/index.html"><img src="Home.png"></a></td>
+        <td><a href="https://DerrienWalters.github.io/javascripts.html"><img src="Javascripts.png"></a></td>
+        <td><a href="https://DerrienWalters.github.io/about.html"><img src="About Me.png"></a></td>
       </tr>
     </thead>
     </table>
