--- a/about.html
+++ b/about.html
@@ -3,12 +3,13 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! About Tab title</title>
-                 <img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/CSC%20106%20banner.jpg" width="1500">  <table>
+                  <img src="CSC 106 banner.jpg" width="1500">  
+    <table>
     <thead>
       <tr>
-        <td><a href="https://DerrienWalters.github.io/index.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Home.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/javascripts.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/Javascripts.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/about.html"><img src="https://raw.githubusercontent.com/DerrienWalters/DerrienWalters.github.io/main/About%20Me.png"></a></td>
+        <td><a href="https://DerrienWalters.github.io/index.html"><img src="Home.png"></a></td>
+        <td><a href="https://DerrienWalters.github.io/javascripts.html"><img src="Javascripts.png"></a></td>
+        <td><a href="https://DerrienWalters.github.io/about.html"><img src="About Me.png"></a></td>
       </tr>
     </thead>
     </table>
