--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! Tab title</title>
-                 <img src="CSC 106 banner.jpg" width="1500">  
+  </head> 
+  <body>
+   <h1>  Hello World, it's Derrien! Welcome to my website's home page.</h1><img src="CSC 106 banner.jpg" width="1500">  
     <table>
     <thead>
       <tr>
@@ -13,9 +15,7 @@
       </tr>
     </thead>
     </table>
-  </head> <h1>  Hello World, it's Derrien! Welcome to my website's home page.</h1>
-  <body>
-  <p>Please try out the above <strong>Navigation Buttons</strong>!</p>
+    <p>Please try out the above <strong>Navigation Buttons</strong>!</p>
 
   <h2> Description of this website</h2>
   <p>   This is a website bulid in github.com using HTML coding. It will continue to evolve as we learn more advanced commands and in the end look much different I'm sure. For now it
