--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
                  <title> Hello World! Tab title</title>
   </head> 
   <body>
-   <h1>  Hello World, it's Derrien! Welcome to my website's home page.</h1><img src="CSC 106 banner.jpg" width="1500">  
-    <table>
+   <img src="CSC 106 banner.jpg" width="1500">  
+    <h1>  Hello World, it's Derrien! Welcome to my website's home page.</h1><table>
     <thead>
       <tr>
         <td><a href="https://DerrienWalters.github.io/index.html"><img src="Home.png"></a></td>
