--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head> 
   <body>
    <img src="CSC 106 banner.jpg" width="1500">  
-    <h1>  Hello World, it's Derrien! Welcome to my website's home page.</h1><table>
+    <h1>  Hello World, it's Derrien! Welcome to my website's home page.</h1>
+    <table>
     <thead>
       <tr>
         <td><a href="https://DerrienWalters.github.io/index.html"><img src="Home.png"></a></td>
