--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <table>
     <thead>
       <tr>
-        <td><a href="https://DerrienWalters.github.io/index.html"><img src="Home.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/javascripts.html"><img src="Javascripts.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/about.html"><img src="About Me.png"></a></td>
+        <td><a href="index.html"><img src="Home.png"></a></td>
+        <td><a href="javascripts.html"><img src="Javascripts.png"></a></td>
+        <td><a href="about.html"><img src="About Me.png"></a></td>
       </tr>
     </thead>
     </table>
