--- a/about.html
+++ b/about.html
@@ -3,18 +3,20 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! About Tab title</title>
-                  <img src="CSC 106 banner.jpg" width="1500">  
+                 
+  </head>
+  <body>
+     <img src="CSC 106 banner.jpg" width="1500">  
     <table>
     <thead>
       <tr>
-        <td><a href="https://DerrienWalters.github.io/index.html"><img src="Home.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/javascripts.html"><img src="Javascripts.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/about.html"><img src="About Me.png"></a></td>
+        <td><a href="index.html"><img src="Home.png"></a></td>
+        <td><a href="javascripts.html"><img src="Javascripts.png"></a></td>
+        <td><a href="about.html"><img src="About Me.png"></a></td>
       </tr>
     </thead>
     </table>
-  </head> <h1>  Welcome to the About Me page! </h1>
-  <body>
+     <h1>  Welcome to the About Me page! </h1>
     <p> My name is Derrien Walters. I am a CSC106 student this year at <a href="https://uri.edu"><strong>URI</strong></a>. I am honored to have served in the U.S. Navy's Submarine Force for 
       more than 12 years. I was fortunate to have been stationed in Hawaii for the later part of my career and that is where I learned to surf.
       I am currently persuing a Compuer Science degree with a minor in Business. My focus is on schooling currently but I am open to job offers.
