--- a/javascripts.html
+++ b/javascripts.html
@@ -3,18 +3,18 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! Javascript Tab title</title>
-                 <img src="CSC 106 banner.jpg" width="1500">  
+  <body>
+    <img src="CSC 106 banner.jpg" width="1500">  
     <table>
     <thead>
       <tr>
-        <td><a href="https://DerrienWalters.github.io/index.html"><img src="Home.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/javascripts.html"><img src="Javascripts.png"></a></td>
-        <td><a href="https://DerrienWalters.github.io/about.html"><img src="About Me.png"></a></td>
+        <td><a href="index.html"><img src="Home.png"></a></td>
+        <td><a href="javascripts.html"><img src="Javascripts.png"></a></td>
+        <td><a href="about.html"><img src="About Me.png"></a></td>
       </tr>
     </thead>
     </table>
   </head> <h1>  Welcome to Derrien's Javascript webpage! </h1>
-  <body>
   <p>   This page will contain Javascript apps I make in my CSC 106 course at the University of Rhode Island.
   </p>
     
