--- a/csstest.html
+++ b/csstest.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
                  <title> Hello World! Tab title</title>
     <link rel="stylesheet" href="mystyle.css">
+    body {
+            background-color: rgb(0, 250, 200);
+        }
   </head> 
   <body>
    <img src="CSC 106 banner.jpg" width="1500">  
