--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! Tab title</title>
+        <link rel="stylesheet" href="mystyle.css">
   </head> 
   <body>
    <img src="CSC 106 banner.jpg" width="1500">  
