--- a/javascripts.html
+++ b/javascripts.html
@@ -3,6 +3,7 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! Javascript Tab title</title>
+        <link rel="stylesheet" href="mystyle.css">
   <body>
     <img src="CSC 106 banner.jpg" width="1500">  
     <table>
