--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head> 
   <body>
    <img src="CSC 106 banner.jpg" width="1500">  
-    <table>
+    <table id="nav-table">
     <thead>
       <tr>
         <td><a href="index.html"><img src="Home.png"></a></td>
