--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="mystyle.css">
   </head> 
   <body>
-   <img src="CSC 106 banner.jpg" width="1500">  
+   <img src="CSC 106 banner.jpg">  
     <table id="nav-table">
     <thead>
       <tr>
