--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <table id="nav-table">
     <thead>
       <tr>
-        <td><a href="index.html"><img src="Home.png"></a></td>
-        <td><a href="javascripts.html"><img src="Javascripts.png"></a></td>
-        <td><a href="about.html"><img src="About Me.png"></a></td>
+        <td id="nav-id"><a href="index.html"><img src="Home.png"></a></td>
+        <td id="nav-id"><a href="javascripts.html"><img src="Javascripts.png"></a></td>
+        <td id="nav-id"><a href="about.html"><img src="About Me.png"></a></td>
       </tr>
     </thead>
     </table>
