--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,7 @@
                  <title> Hello World! Javascript Tab title</title>
         <link rel="stylesheet" href="mystyle.css">
   <body>
-    <img src="CSC 106 banner.jpg" width="1500">  
+    <img src="myBanner.jpg">  
     <table>
     <thead>
       <tr>
