--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
                    
   </head>
   <body>
-     <img src="CSC 106 banner.jpg" width="1500">  
+       <img src="CSC 106 banner.jpg">  
     <table>
     <thead>
       <tr>
