--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
                    
   </head>
   <body>
-       <img src="CSC 106 banner.jpg">  
+       <img src="myBanner.jpg">  
     <table>
     <thead>
       <tr>
