--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! About Tab title</title>
+    <style>
+      #nav-table {width: 800px;}
+#nav-td { width: 200px: text-align:center;}
+    </style>
                    
   </head>
   <body>
