--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <thead>
       <tr>
         <td id="nav-td"><a href="index.html"><img src="Home.png"></a></td>
-        <td id="nav-td"><a href="javascripts.html"><img src="Javascripts.png"></a></td>
-        <td id="nav-td"><a href="about.html"><img src="About Me.png"></a></td>
+        <td id="nav-td"><a href="javascripts.html"><img src="javascript.png"></a></td>
+        <td id="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
+        <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
       </tr>
     </thead>
     </table>
