--- a/javascripts.html
+++ b/javascripts.html
@@ -9,9 +9,10 @@
     <table>
     <thead>
       <tr>
-        <td><a href="index.html"><img src="Home.png"></a></td>
-        <td><a href="javascripts.html"><img src="Javascripts.png"></a></td>
-        <td><a href="about.html"><img src="About Me.png"></a></td>
+       <td id="nav-td"><a href="index.html"><img src="Home.png"></a></td>
+        <td id="nav-td"><a href="javascripts.html"><img src="javascript.png"></a></td>
+        <td id="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
+        <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
       </tr>
     </thead>
     </table>
