--- a/javascripts.html
+++ b/javascripts.html
@@ -3,7 +3,8 @@
   <head>
   <meta charset="utf-8">
                  <title> Hello World! Javascript Tab title</title>
-        <link rel="stylesheet" href="mystyle.css">
+       <link rel="stylesheet" href="mystyle.css">
+   </head>
   <body>
     <img src="myBanner.jpg">  
     <table>
@@ -16,7 +17,7 @@
       </tr>
     </thead>
     </table>
-  </head> <h1>  Welcome to Derrien's Javascript webpage! </h1>
+  <h1>  Welcome to Derrien's Javascript webpage! </h1>
   <p>   This page will contain Javascript apps I make in my CSC 106 course at the University of Rhode Island.
   </p>
     
