--- a/javascripts.html
+++ b/javascripts.html
@@ -7,7 +7,7 @@
    </head>
   <body>
     <img src="myBanner.jpg">  
-    <table>
+    <table id="nav-table">
     <thead>
       <tr>
        <td id="nav-td"><a href="index.html"><img src="Home.png"></a></td>
