--- a/apps.html
+++ b/apps.html
@@ -21,7 +21,7 @@
     <p>Please try out the above <strong>Navigation Buttons</strong>!</p>
 
   <h2> My apps page</h2>
-  <p>   This page may not be needed for CSC106 but was added so the navigation button wouldn'
+  <p>   This page may not be needed for CSC106 but was added so the navigation button wouldn't
   just show a 404 error.
   </p>
  
