--- a/about.html
+++ b/about.html
@@ -10,8 +10,11 @@
                    
   </head>
   <body>
+    {background-image: url("myBackground.jpg");
+    background-color: #000000;
+    }
        <img src="myBanner.jpg">  
-    <table>
+    <table id="nav-table">
     <thead>
       <tr>
         <td id="nav-td"><a href="index.html"><img src="Home.png"></a></td>
