--- a/about.html
+++ b/about.html
@@ -5,14 +5,15 @@
                  <title> Hello World! About Tab title</title>
     <style>
       #nav-table {width: 800px;}
-      #nav-td { width: 200px: text-align:center;}
+      #nav-td { width: 200px: text-align:center;} 
+      body {background-image: url("myBackground.jpg");
+    background-color: #000000;
+    }
     </style>
                    
   </head>
   <body>
-    {background-image: url("myBackground.jpg");
-    background-color: #000000;
-    }
+   
        <img src="myBanner.jpg">  
     <table id="nav-table">
     <thead>
