--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
       #nav-table {width: 800px;}
       #nav-td { width: 200px: text-align:center;} 
       body {background-image: url("myBackground.jpg");
+    background-position: center;    
+    background-repeat: no-repeat;   
     background-color: #000000;
     }
     </style>
