--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
       #nav-td { width: 200px: text-align:center;} 
       body {background-image: url("myBackground.jpg");
     background-position: center;    
-    background-repeat: no-repeat;   
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: #000000;
     }
     </style>
