--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
     background-size: cover;
     background-color: #000000;
     }
+      h1 {text color: white}
+      p {text color: white}
     </style>
                    
   </head>
