--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     background-color: #000000;
     }
       h1 {color: white}
-      p {color: white}
+      p {color: #999966}
     </style>
                    
   </head>
