--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     background-position: center;    
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #000000;
+    background-color: rbg(153, 153 ,102);
     }
       h1 {color: white}
       p {color: #999966}
