--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     background-color: rbg(153, 153 ,102);
     }
       h1 {color: white}
-      p {color: #999966}
+      p {color: rgb(0, 0, 153)}
     </style>
                    
   </head>
