--- a/about.html
+++ b/about.html
@@ -14,11 +14,12 @@
     }
       h1 {color: white}
       p {color: rgb(0, 0, 153)}
+      .set1 {text-align: center}
     </style>
                    
   </head>
   <body>
-   
+   <div class="set1">
        <img src="myBanner.jpg">  
     <table id="nav-table">
     <thead>
@@ -37,5 +38,6 @@
     </p>
     <p> I enjoy logic based games and activities. My wife and I have two children, two cat, two dogs. 
     </p>
+    </div>
   </body>
                  </html>
