--- a/about.html
+++ b/about.html
@@ -4,8 +4,11 @@
   <meta charset="utf-8">
                  <title> Hello World! About Tab title</title>
     <style>
-      #nav-table {width: 800px;}
-      #nav-td { width: 200px: text-align:center;} 
+      #nav-table {width: 800px;
+      margin-left; auto;
+      margin-right: auto;}
+      #nav-td { width: 200px: text-align:center;
+      } 
       body {background-image: url("myBackground.jpg");
     background-position: center;    
     background-repeat: no-repeat;
