--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
                  <title> Hello World! About Tab title</title>
     <style>
-      #nav-table {width: 800px;
+      .nav-table {width: 800px;
       margin-left; auto;
       margin-right: auto;}
       #nav-td { width: 200px: text-align:center;
@@ -24,7 +24,7 @@
   <body>
    <div class="set1">
        <img src="myBanner.jpg">  
-    <table id="nav-table">
+    <table class="nav-table">
     <thead>
       <tr>
         <td id="nav-td"><a href="index.html"><img src="Home.png"></a></td>
