--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
                  <title> Hello World! About Tab title</title>
     <style>
-      .nav-table {width: 800px;
+      .nav-table {width: 80%;
       margin-left; auto;
       margin-right: auto;}
-      #nav-td { width: 200px: text-align:center;
+      #nav-td { width: 25%: text-align:center;
       } 
       body {background-image: url("myBackground.jpg");
     background-position: center;    
