--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     background-size: cover;
     background-color: rbg(153, 153 ,102);
     }
-      h1 {color: white; font-size 30px;}
+      h1 {color: white;}
       p {color: rgb(0, 0, 153)}
       .set1 {text-align: center}
     </style>
