--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
       }
       #nav-td { width: 200px: text-align:center;
       } 
-      body {background-image: url("myBackground.jpg");
+      body {background-image: url("myBackground1.jpg");
     background-position: center;    
     background-repeat: no-repeat;
     background-size: cover;
