--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
                  <title> Hello World! About Tab title</title>
     <style>
-      .nav-table {width: 800px;
+      .nav-table {width: 800px; align: center;
       }
       #nav-td { width: 200px: text-align:center;
       } 
