--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
     </p>
     <p> I enjoy logic based games and activities. My wife and I have two children, two cat, two dogs. 
     </p>
+     <img src="derrien.jpg"><img src="hawaii.jpg"><img src="sub.jpg">
     </div>
   </body>
                  </html>
