--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     }
       h1 {color: white;}
       p {color: rgb(255, 255, 255)}
-      .set1 {text-align: center}
+      .set1 {text-align: center; width= 800}
     </style>
                    
   </head>
