--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     }
       h1 {color: white;}
       p {color: rgb(255, 255, 255)}
-      .set1 {text-align: center; width= 800}
+      .set1 {text-align: center; width: 800px}
     </style>
                    
   </head>
@@ -40,7 +40,7 @@
     </p>
     <p> I enjoy logic based games and activities. My wife and I have two children, two cat, two dogs. 
     </p>
-     <img src="derrien.jpg"><img src="hawaii.jpg"><img src="sub.jpg">
+     <img id=derrien src="derrien.jpg"><img id=hawaii src="hawaii.jpg"><img id=sub src="sub.jpg">
     </div>
   </body>
                  </html>
