--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
     }
       h1 {color: white;}
       p {color: rgb(255, 255, 255)}
-      .set1 {text-align: center; width: 800px}
+      .set1 {text-align: center; 
+        width: 800px}
     </style>
                    
   </head>
