--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="mystyle.css">
   </head> 
   <body>
+    <div class="set2">
    <img src="myBanner.jpg">  
     <table id="nav-table">
     <thead>
@@ -45,7 +46,7 @@
     <li> out of order 2</li>
     <li> item 1</li>
          </ol>
-        
+         </div> 
   </body>
                  </html>
                  
