--- a/javascripts.html
+++ b/javascripts.html
@@ -6,6 +6,7 @@
        <link rel="stylesheet" href="mystyle.css">
    </head>
   <body>
+    <div class="set2">
     <img src="myBanner.jpg">  
     <table id="nav-table">
     <thead>
@@ -20,6 +21,6 @@
   <h1>  Welcome to Derrien's Javascript webpage! </h1>
   <p>   This page will contain Javascript apps I make in my CSC 106 course at the University of Rhode Island.
   </p>
-    
+    </div>
   </body>
                  </html>
