--- a/apps.html
+++ b/apps.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="mystyle.css">
   </head> 
   <body>
+    <div class="set2">
    <img src="myBanner.jpg">  
     <table id="nav-table">
     <thead>
@@ -24,7 +25,6 @@
   <p>   This page may not be needed for CSC106 but was added so the navigation button wouldn't
   just show a 404 error.
   </p>
- 
-        
+    </div>
   </body>
                  </html>
