--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
                  <title> Hello World! About Tab title</title>
     <style>
-      .nav-table {width: 800px; padding-left: 450px;
+      .nav-table {width: 800px;
       }
       #nav-td { width: 200px: text-align:center;
       } 
@@ -17,7 +17,9 @@
       h1 {color: white;}
       p {color: rgb(255, 255, 255)}
       .set1 {text-align: center; 
-        width: 800px}
+        width: 800px;
+      paddig-left; 340px;
+      }
     </style>
                    
   </head>
