--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       p {color: rgb(255, 255, 255)}
       .set1 {text-align: center; 
         width: 800px;
-      paddig-left: 340px;
+      padding-left: 340px;
       }
     </style>
                    
