--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     }
       h1 {color: white;}
       p {color: rgb(255, 255, 255)}
+      #derrien1 {float: left;}
       .set1 {text-align: center; 
         width: 800px;
       padding-left: 340px;
@@ -43,7 +44,7 @@
     </p>
     <p> I enjoy logic based games and activities. My wife and I have two children, two cat, two dogs. 
     </p>
-     <img id=derrien src="derrien.jpg"><img id=hawaii src="hawaii.jpg"><img id=sub src="sub.jpg">
+     <img id=derrien1 src="derrien.jpg"><img id=hawaii src="hawaii.jpg"><img id=sub src="sub.jpg">
     </div>
   </body>
                  </html>
