--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     }
       h1 {color: white;}
       p {color: rgb(255, 255, 255)}
-      #derrien1 {float: left;}
-      #derrien2 {float: right;}
+      #derrien1 {float: left; width: 400px}
+      #derrien2 {float: right; width: 380px;}
       .set1 {text-align: center; 
         width: 800px;
       padding-left: 340px;
