--- a/about.html
+++ b/about.html
@@ -18,6 +18,8 @@
       p {color: rgb(255, 255, 255)}
       #derrien1 {float: left; width: 400px}
       #derrien2 {float: right; width: 380px;}
+      #hawaii {float: left; width: 400px; padding-top: 20px;}
+      #sub {float: right; width: 380px; padding-top: 20px;}
       .set1 {text-align: center; 
         width: 800px;
       padding-left: 340px;
