--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@
       #sub {float: right; width: 380px; padding-top: 20px;}
       .set1 {text-align: center; 
         width: 800px;
-      padding-left: 340px;
+      margin-left: auto;
+        margin-right: auto;
       }
     </style>
                    
