--- a/javascripts.html
+++ b/javascripts.html
@@ -19,7 +19,7 @@
     </thead>
     </table>
   <h1>  Welcome to Derrien's Javascript webpage! </h1>
-  <p>   This page will contain Javascript apps I make in my CSC 106 course at the University of Rhode Island.
+  <p>   This page contains Javascript apps I made in my CSC 106 course at the University of Rhode Island.
   </p>
     </div>
   </body>
