--- a/javascripts.html
+++ b/javascripts.html
@@ -22,7 +22,7 @@
   <p>   This page contains Javascript apps I made in my CSC 106 course at the University of Rhode Island.
   </p>
       <h2><a href="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376">walters_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-    <h2><a href="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776">walters_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+    <h2><a href="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776">walters_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     </div>
   </body>
                  </html>
