--- a/javascripts.html
+++ b/javascripts.html
@@ -21,8 +21,12 @@
   <h1>  Welcome to Derrien's Javascript webpage! </h1>
   <p>   This page contains Javascript apps I made in my CSC 106 course at the University of Rhode Island.
   </p>
-      <h2><a href="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376">walters_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-    <h2><a href="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776">walters_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-    </div>
+      <table>
+        <tr>
+      <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376">walters_dancingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+    <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776">walters_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        </tr>
+      </table>
+        </div>
   </body>
                  </html>
