--- a/javascripts.html
+++ b/javascripts.html
@@ -28,6 +28,7 @@
         </tr>
         <tr>
           <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_decision/6728990416388096">walters_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_decision/6728990416388096/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_zoo/6653014240083968">walters_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_zoo/6653014240083968/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p></td>
         </tr>
       </table>
         </div>
