--- a/javascripts.html
+++ b/javascripts.html
@@ -32,7 +32,8 @@
         </tr>
         <tr>
           <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_tag/4842138832420864">walters_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_tag/4842138832420864/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        <tr>
+       <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_contacts/6082264141086720">walters_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_contacts/6082264141086720/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        </tr>
       </table>
         </div>
   </body>
