--- a/javascripts.html
+++ b/javascripts.html
@@ -38,6 +38,10 @@
           <td><h2><a href="https://www.khanacademy.org/computer-programming/tictactoe_3_23-with-win-statement-in-println/4627514593853440">TicTacToe_3_23 with win statement in println</a></h2><script src="https://www.khanacademy.org/computer-programming/tictactoe_3_23-with-win-statement-in-println/4627514593853440/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
        <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_mole_mash/6255185543249920">Walters_Mole_Mash</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_mole_mash/6255185543249920/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         </tr>
+        <tr>
+          <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_frogger/6568089043812352">Walters_Frogger</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_frogger/6568089043812352/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+          <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_rock_paper_scissors/5842935607148544">Walters_Rock_Paper_Scissors</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_rock_paper_scissors/5842935607148544/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        </tr>
       </table>
         </div>
   </body>
