--- a/javascripts.html
+++ b/javascripts.html
@@ -42,6 +42,9 @@
           <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_frogger/6568089043812352">Walters_Frogger</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_frogger/6568089043812352/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
           <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_rock_paper_scissors/5842935607148544">Walters_Rock_Paper_Scissors</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_rock_paper_scissors/5842935607148544/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         </tr>
+        <tr>
+          <td><h2><a href="https://www.khanacademy.org/computer-programming/memory_game/4992906969432064">memory_game</a></h2><script src="https://www.khanacademy.org/computer-programming/memory_game/4992906969432064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        </tr>
       </table>
         </div>
   </body>
