--- a/about.html
+++ b/about.html
@@ -39,6 +39,9 @@
         <td id="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
         <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
       </tr>
+      <tr>
+        <td id="nav-td"><a href="FinalProject.html"><img src="FinalProject.png"></a></td>
+      </tr>
     </thead>
     </table>
      <h1>  Welcome to the About Me page! </h1>
