--- a/apps.html
+++ b/apps.html
@@ -16,6 +16,9 @@
         <td id="nav-td"><a href="apps.html"><img src="apps.png"></a></td>
         <td id="nav-td"><a href="about.html"><img src="about.png"></a></td>
       </tr>
+       <tr>
+        <td id="nav-td"><a href="FinalProject.html"><img src="FinalProject.png"></a></td>
+      </tr>
     </thead>
     </table>
     <h1>  Hello World, it's Derrien! Welcome to my website's app page.</h1>
