--- a/FinalProject.html
+++ b/FinalProject.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta charset="utf-8">
-                 <title> Hello World! Javascript Tab title</title>
+                 <title> Hello World! FInal Project Tab title</title>
        <link rel="stylesheet" href="mystyle.css">
    </head>
   <body>
@@ -21,32 +21,13 @@
       </tr>
     </thead>
     </table>
-  <h1>  Welcome to Derrien's Javascript webpage! </h1>
-  <p>   This page contains Javascript apps I made in my CSC 106 course at the University of Rhode Island.
+  <h1>  Welcome to Derrien's Final Project webpage! </h1>
+  <p>   This page contains a Javascript app I made with my partner Neil Macleod in my CSC 106 course at the University of Rhode Island.
   </p>
       <table>
         <tr>
       <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376">walters_dancingBitmojiFun</a></h2><script width="100" src="https://www.khanacademy.org/computer-programming/walters_dancingbitmojifun/4630863010021376/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
     <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776">walters_racingBitmojiFun</a></h2><script width="100" src="https://www.khanacademy.org/computer-programming/walters_racingbitmojifun/6544245145419776/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        </tr>
-        <tr>
-         <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_decision/6728990416388096">walters_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_decision/6728990416388096/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_zoo/6653014240083968">walters_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_zoo/6653014240083968/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p></td>
-        </tr>
-        <tr>
-          <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_tag/4842138832420864">walters_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_tag/4842138832420864/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-       <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_contacts/6082264141086720">walters_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_contacts/6082264141086720/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        </tr>
-        <tr>
-          <td><h2><a href="https://www.khanacademy.org/computer-programming/tictactoe_3_23-with-win-statement-in-println/4627514593853440">TicTacToe_3_23 with win statement in println</a></h2><script src="https://www.khanacademy.org/computer-programming/tictactoe_3_23-with-win-statement-in-println/4627514593853440/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-       <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_mole_mash/6255185543249920">Walters_Mole_Mash</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_mole_mash/6255185543249920/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        </tr>
-        <tr>
-          <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_frogger/6568089043812352">Walters_Frogger</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_frogger/6568089043812352/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-          <td><h2><a href="https://www.khanacademy.org/computer-programming/walters_rock_paper_scissors/5842935607148544">Walters_Rock_Paper_Scissors</a></h2><script src="https://www.khanacademy.org/computer-programming/walters_rock_paper_scissors/5842935607148544/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        </tr>
-        <tr>
-          <td><h2><a href="https://www.khanacademy.org/computer-programming/memory_game/4992906969432064">memory_game</a></h2><script src="https://www.khanacademy.org/computer-programming/memory_game/4992906969432064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         </tr>
       </table>
         </div>
