--- a/FinalProject.html
+++ b/FinalProject.html
@@ -22,7 +22,10 @@
     </thead>
     </table>
   <h1>  Welcome to Derrien's Final Project webpage! </h1>
-  <p>   This page contains a Javascript app I made with my partner Neil Macleod in my CSC 106 course at the University of Rhode Island.
+  <p>   This page contains a Javascript app I made with my partner Neil Macleod in my CSC 106 course at the University of Rhode Island. Our final project we decided on was to build a Sudoku application and what you see below is what it evolved into. We used every aspect of programming we learned over the semester to create this game with 3 different difficulties to try.
+
+How to use the app: 
+
   </p>
       <table>
         <tr>
